2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/libgcrypt_wrap/cipher_wrap.h: Define size_t to
	grub_size_t. This fixes the case when size_t mismatches grub_size_t.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimagexx.c (make_reloc_section): Fix memory leak.
	(load_image): Likewise.

2013-10-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-render-label.c: Move backend part to ...
	* util/render-label.c: ... here.

2013-10-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/random.c: Use unix/random.c on haiku. Haiku uses
	yarrow (by B. Schneier et al) for its /dev/urandom (similar to FreeBSD).

2013-10-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/generic/blocklist.c: Add missing include to string.h.

2013-10-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/efi/efidisk.c (grub_efidisk_get_device_name): Handle
	CD-ROM in case when it's declared as having subpartitions.

2013-10-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't add -lm on haiku.

	* configure.ac: Define BUILD_LIBM to -lm on most platforms
	and empty on haiku.
	* grub-core/Makefile.am (gentrigtables): Use $(BUILD_LIBM) rather than
	-lm.

2013-10-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Use -melf_*_haiku as target on haiku.

2013-10-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.util.def: Add util/setup.c to extra_dist.

2013-10-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/mmap.c (grub_machine_mmap_iterate): Pass
	unknown types through.

2013-10-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/unix/getroot.c (grub_util_check_block_device): Remove.
	(grub_util_check_char_device): Likewise.
	* include/grub/emu/getroot.h: Likewise.

2013-10-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/libgcrypt_wrap/cipher_wrap.h: Use define for defining
	memset rather than inline static function.
