@@ -17,6 +17,7 @@ library = {
   common = grub-core/osdep/devmapper/hostdisk.c;
   common = grub-core/osdep/hostdisk.c;
   common = grub-core/osdep/unix/hostdisk.c;
+  common = grub-core/osdep/exec.c;
   common = grub-core/osdep/sleep.c;
   common = grub-core/osdep/password.c;
   common = grub-core/kern/emu/misc.c;
