@@ -241,6 +241,8 @@ kernel = {
   emu = kern/emu/cache_s.S;
   emu = kern/emu/hostdisk.c;
   emu = osdep/unix/hostdisk.c;
+  emu = osdep/exec.c;
+  extra_dist = osdep/unix/exec.c;
   emu = osdep/devmapper/hostdisk.c;
   emu = osdep/hostdisk.c;
   emu = kern/emu/hostfs.c;
